--- a/markup/components/clientsQuotes/clientsQuotes.scss
+++ b/markup/components/clientsQuotes/clientsQuotes.scss
@@ -7,6 +7,7 @@
 		padding-right: 12px;
 	}
 	&-quote {
+		display: block;
 		font-size: 18px;
 		color: #adadad;
 		line-height: (33 / 18);
@@ -18,6 +19,9 @@
 		}
 		&:after {
 			content: '';
+		}
+		&-text {
+			margin-bottom: 20px;
 		}
 	}
 	&-autor {
