--- a/markup/components/contactForm/contactForm.html
+++ b/markup/components/contactForm/contactForm.html
@@ -2,7 +2,7 @@
 	<div id="contactForm">
 		<div class="contactForm-holder">
 			<div class="contactForm-holder-helper">
-				<div class="contactForm-blur"></div>
+				<div class="contactForm-blur" style="background-image: url('%=static=%/img/content/bg-contact.jpg');"></div>
 				<div class="contactForm">
 					<h2 class="contactForm-title">CONTACTS</h2>
 					<p class="contactForm-desc">Sign up for our newsletter to receive updates</p>
