--- a/markup/components/order/order.html
+++ b/markup/components/order/order.html
@@ -19,6 +19,7 @@
 								</div>
 							</form>
 						</div>
+						<p class="order-note">* Your data will not be transferred</p>
 					</div>
 				</div>
 			</div>
