--- a/markup/components/partners/partners.html
+++ b/markup/components/partners/partners.html
@@ -1,4 +1,4 @@
-<div class="mt-m">
+<div class="partners-pixelPerfect-helper-m-t">
 	<div class="bg-darken-2">
 		<div class="container-fluid">
 			<div class="p-mm">
