--- a/markup/components/partners/partners.scss
+++ b/markup/components/partners/partners.scss
@@ -1,4 +1,7 @@
 .partners {
+	&-pixelPerfect-helper-m-t {
+		margin-top: 3.9%;
+	}
 	&-list {
 		margin-left: -$grid-gutter-width-base / 2;
 		margin-right: -$grid-gutter-width-base / 2;
