--- a/markup/components/scheme/scheme.html
+++ b/markup/components/scheme/scheme.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <div class="container-fluid">
-    <div class="p-mt">
+    <div class="scheme-pixelPerfect-helper-p-t">
         <div class="scheme ver-indents-parent">
            <div class="row">
                <div class="scheme-top-line"></div>
