--- a/markup/components/coupleTiles/coupleTiles.scss
+++ b/markup/components/coupleTiles/coupleTiles.scss
@@ -11,15 +11,6 @@
 		& + & {
 			margin-top: $grid-gutter-width-base / 2;
 		}
-		&.horizontal {
-			.tile-content-box {
-				// &:before {
-				// 	position: absolute;
-				// 	top: 53 / 380 * 100%;
-				// 	left: -5px;
-				// }
-			}
-		}
 	}
 	&-content {
 		&-box {
@@ -28,12 +19,13 @@
 			text-align: center;
 			&:before {
 				position: absolute;
-				top: -5px;
-				left: 53 / 380 * 100%;
+				top: -6px;
+				// left: 53 / 380 * 100%;
+				left: 14.5%;
 				content: '';
 				display: block;
-				width: 10px;
-				height: 10px;
+				width: 11px;
+				height: 11px;
 				background-color: #fff;
 				transform: rotate(45deg);
 			}
@@ -42,6 +34,7 @@
 			display: table;
 			width: 100%;
 			height: 100%;
+			padding: 5% 0 2.5%;
 		}
 		&-aligner {
 			display: table-row;
@@ -77,6 +70,7 @@
 			text-transform: uppercase;
 		}
 		margin: 0;
+		letter-spacing: 1px;
 		color: #16b5ef;
 	}
 	&-head {
@@ -84,21 +78,26 @@
 			text-transform: uppercase;
 		}
 		margin: 0;
+		letter-spacing: 2px;
 		color: #212121;
 	
 	}
 	&-desc {
 		margin: 0;
 		font-size: 15px;
-		line-height: 24px; // change on relative val 
+		line-height: (24 / 15);
 		color: #777;
 		padding: 0 15px;
 	}
 	&-number {
 		color: #212121;
 		font-family: "Times  New  Roman", serif;
-		font-size: 15px;
+		font-size: 14px;
 		font-style: italic;
+		@media (min-width: 1919px) {
+			position: relative;
+			bottom: 11px;
+		}
 
 	}
 	@include media-breakpoint-up(xs){
@@ -111,8 +110,9 @@
 				width: 50%;
 				float: left;
 				&:before {
-					top: 53 / 380 * 100%;
-					left: -5px;
+					// top: 53 / 380 * 100%;
+					top: 14.5%;
+					left: -6px;
 				}
 			}
 		}
@@ -122,6 +122,7 @@
 			@include cf();
 			float: left;
 			width: 66.66%;
+			margin-bottom: 0;
 			.tile-holder {
 				width: 100%;
 			}
@@ -141,15 +142,16 @@
 			&.vertical {
 				.tile-content-box {
 					&:before {
-						top: -5px;
-						left: 53 / 380 * 100%;
+						top: -6px;
+						// left: 53 / 380 * 100%;
+						left: 14.5%;
 					}
 				}
 			}
 			&.shift {
 				.tile-content-box {
 					&:before {
-						right: -5px;
+						right: -6px;
 						left: auto;
 					}
 				}
