--- a/markup/components/order/order.scss
+++ b/markup/components/order/order.scss
@@ -8,7 +8,7 @@
 	}
 	&-form {
 		position: relative;
-		margin-top: 25px;
+		margin-top: 26px;
 		padding: 10px;
 		border-radius: 4px;
 		background-color: #fff;
@@ -49,6 +49,19 @@
 		}
 		width: 100%;
 		padding: 17px 30px;
+	}
+	&-note {
+		@extend .icon-lock-locked;
+		color: $accent;
+		margin: 0;
+		margin-top: 18px;
+		font-size: 14px;
+		letter-spacing: 0.3px;
+		&:before {
+			@extend .icomoon-helper;
+			margin-right: 13px;
+			margin-left: 2px;
+		}
 	}
 	@include media-breakpoint-up(xs){
 		&-form-input-group {
