--- a/markup/components/head/head.html
+++ b/markup/components/head/head.html
@@ -27,7 +27,7 @@
     <link rel="image_src" href="" />
 {{/if}}
 
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="favicon.png">
 <script>
     (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
 </script>
