add scrollbar for offerCards

--- a/markup/components/offerCards/offerCards.scss
+++ b/markup/components/offerCards/offerCards.scss
@@ -1,4 +1,13 @@
 .offerCard {
+	&-scrollbar {
+		height: 2px;
+		top: 40px;
+		.swiper-scrollbar-drag {
+			top: auto;
+			bottom: 2px;
+			height: 6px;
+		}
+	}
 	&-slide {
 		text-align: center;	
 	}
