--- a/markup/components/about/about.html
+++ b/markup/components/about/about.html
@@ -3,8 +3,8 @@
 		<div class="section-about" id="about" style="background-image: url('static/img/general/bg-about.png');">
 			<div class="row">
 				<div class="col-md-4">
-					<div class="section-about-secondary-img-control"><img src="static/img/content/about-img-2.jpg" alt="image" class="section-about-secondary-img"></div>
-					<div class="section-about-text-control">
+					<div class="wow fadeInUp section-about-secondary-img-control" data-wow-delay=".1s"><img src="static/img/content/about-img-2.jpg" alt="image" class="section-about-secondary-img"></div>
+					<div class="wow fadeInLeft section-about-text-control" data-wow-delay=".1s">
 						<h3 class="block-title block-title-sm section-about-title">ABOUT US</h3>
 						<p class="block-desc prevent-ta">Aliquam sed posuere urna, et gravida nisl. Praesent interdum nisl libero, pretium egestas purus eleifend vitae. Mauris suscipit vel lectus at luctus.</p>
 						<div class="section-about-btn">
@@ -13,7 +13,7 @@
 					</div>
 				</div>
 				<div class="col-md-8">
-					<div class="section-about-primary-img-control"><img src="static/img/content/about-img-1.jpg" alt="image" class="section-about-primary-img"></div>
+					<div class="wow fadeInRight section-about-primary-img-control" data-wow-delay=".1s"><img src="static/img/content/about-img-1.jpg" alt="image" class="section-about-primary-img"></div>
 				</div>
 			</div>
 		</div>
