--- a/markup/components/contactForm/contactForm.html
+++ b/markup/components/contactForm/contactForm.html
@@ -4,19 +4,19 @@
 			<div class="contactForm-holder-helper">
 				<div class="contactForm-blur" style="background-image: url('%=static=%/img/content/bg-contact.jpg');"></div>
 				<div class="contactForm">
-					<h2 class="contactForm-title">CONTACTS</h2>
-					<p class="contactForm-desc">Sign up for our newsletter to receive updates</p>
+					<h2 class="contactForm-title wow fadeIn" data-wow-delay=".1s">CONTACTS</h2>
+					<p class="contactForm-desc wow fadeIn" data-wow-delay=".1s">Sign up for our newsletter to receive updates</p>
 					<form action="" class="contactForm-form">
-						<div class="form-group">
+						<div class="form-group wow fadeInLeft" data-wow-delay=".1s">
 							<input type="text" class="form-control contactForm-input" placeholder="Name">
 							</div>
-						<div class="form-group">
+						<div class="form-group wow fadeInRight" data-wow-delay=".15s">
 							<input type="tel" class="form-control contactForm-input" placeholder="Phone">
 							</div>
-						<div class="form-group">
+						<div class="form-group wow fadeInLeft" data-wow-delay=".2s">
 							<input type="email" class="form-control contactForm-input" placeholder="E-mail">
 							</div>
-						<input type="submit" class="btn btn-block btn-xlg" value="SEND">
+						<input type="submit" class="btn btn-block btn-xlg wow fadeInDown" data-wow-delay=".1s" value="SEND">
 					</form>
 				</div>
 			</div>
