--- a/markup/components/coupleTiles/coupleTiles.html
+++ b/markup/components/coupleTiles/coupleTiles.html
@@ -1,7 +1,7 @@
 <div class="tiles-holder">
 	<div class="tile-float-helper">
 	
-		<div class="tile-holder horizontal"> 
+		<div class="wow fadeInLeft tile-holder horizontal" data-wow-delay=".15s"> 
 			<div class="tile-img-box">
 				<div class="tile-inner">
 					<div class="tile-fill-size">
@@ -43,7 +43,7 @@
 		</div>
 	
 	
-		<div class="tile-holder horizontal shift">
+		<div class="wow fadeInRight tile-holder horizontal shift" data-wow-delay=".15s">
 			<div class="tile-img-box">
 				<div class="tile-inner">
 					<div class="tile-fill-size">
@@ -86,7 +86,7 @@
 	
 	</div>
 	
-	<div class="tile-holder vertical">
+	<div class="wow fadeInUp tile-holder vertical" data-wow-delay=".15s">
 		<div class="tile-img-box">
 			<div class="tile-inner">
 				<div class="tile-fill-size">
