--- a/markup/components/header/header.html
+++ b/markup/components/header/header.html
@@ -1,18 +1,18 @@
 <header class="header">
-	<div class="header-logo">
+	<div class="header-logo wow fadeInLeft" data-wow-delay=".4s">
 		<!-- <img src="" alt="Logo" class="header-logo-img"> -->
 		<h2 class="header-logo prevent-tt"><span class="text-accent">Moun</span>tains</h2>
 	</div>
-	<button class="header-nav-toggler btn btn-sm">
+	<button class="header-nav-toggler btn btn-sm wow fadeInRight" data-wow-delay=".4s">
 		<span class="header-nav-toggler-line"></span>
 		<span class="header-nav-toggler-line"></span>
 		<span class="header-nav-toggler-line"></span>
 	</button>
-	<div class="header-btn-control">
+	<div class="header-btn-control wow fadeInRight" data-wow-delay=".4s">
 		<a href="#" class="header-btn btn btn-transparent btn-sm">call us</a>
 	</div>
 	<nav class="header-nav">
-		<ul class="header-nav-list">
+		<ul class="header-nav-list wow fadeInDown" data-wow-delay=".4s">
 			<li class="header-nav-item">
 				<a href="#about" class="header-nav-link"><span class="header-nav-link-helper">about us</span></a>
 			</li>
