--- a/markup/components/header/header.scss
+++ b/markup/components/header/header.scss
@@ -39,6 +39,7 @@ $nav-transform-point: 1000px;
 		width: 100%;
 		text-align: right;
 		clear: both;
+		overflow: hidden;
 
 		visibility: collapse;
 		z-index: -999;
