--- a/markup/components/journal/journal.html
+++ b/markup/components/journal/journal.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div id="journal">
 		<div class="p-m">
-			<h2 class="block-title">our journal</h2>
+			<h2 class="block-title wow fadeIn">our journal</h2>
 			<div class="journal-tiles-control mt-m">
 				{{> coupleTiles/coupleTiles}}
 			</div>
