--- a/markup/components/jumbotron/jumbotron.html
+++ b/markup/components/jumbotron/jumbotron.html
@@ -5,7 +5,7 @@
                 {{> header/header}}
             </div>
         </div>
-        <div class="jumbotron-content-control container-fluid">
+        <div class="jumbotron-content-control container-fluid wow fadeIn" data-wow-delay=".25s">
             <div class="jumbotron-content">
                <div class="jumbotron-content-wrap">
                	 <h1 class="jumbotron-title">TRAVEL WITH US</h1>
