--- a/markup/components/offers/offers.html
+++ b/markup/components/offers/offers.html
@@ -1,10 +1,10 @@
-<div id="offers" class="offers-pixelPerfect-helper-p-t">
+<div id="offers" class="offers-pixelPerfect-helper-p-t" data-wow-delay=".25s">
 	<div class="offers-bg-primary mens-in-boats" style="background-image: url('static/img/content/bg-offer.png');">
 		<div class="offers-bg-secondary" style="background-image: url('static/img/content/bg-offer-dots.png');">
 			<div class="offers-bg-secondary-inner">
 				<div class="container-fluid">
 					<div id="offers">
-						<h2 class="block-title">TRAVEL WITH US</h2>
+						<h2 class="block-title wow fadeIn">TRAVEL WITH US</h2>
 						{{> offerCards/offerCards}}
 					</div>
 				</div>
