--- a/markup/components/order/order.html
+++ b/markup/components/order/order.html
@@ -4,9 +4,9 @@
 			<div class="p-lg">
 				<div class="row">
 					<div class="col-lg-9">
-						<h3 class="block-title block-title-sm">DO YOU WANNA GO?</h3>
-						<p class="block-desc prevent-ta">Aliquam sed posuere urna, et gravida nisl. Praesent interdum nisl libero, pretium egestas purus eleifend vitae. Mauris suscipit vel lectus at luctus.</p>
-						<div class="order-form-control">
+						<h3 class="block-title block-title-sm wow fadeInLeft" data-wow-delay=".1s">DO YOU WANNA GO?</h3>
+						<p class="block-desc prevent-ta wow fadeInRight" data-wow-delay=".1s">Aliquam sed posuere urna, et gravida nisl. Praesent interdum nisl libero, pretium egestas purus eleifend vitae. Mauris suscipit vel lectus at luctus.</p>
+						<div class="order-form-control wow fadeInLeft" data-wow-delay=".1s">
 							<form action="" class="order-form">
 								<div class="order-form-input-group">
 									<input type="text" class="order-form-input" placeholder="Your name:">
@@ -19,7 +19,7 @@
 								</div>
 							</form>
 						</div>
-						<p class="order-note">* Your data will not be transferred</p>
+						<p class="order-note wow fadeInUp" data-wow-delay=".1s">* Your data will not be transferred</p>
 					</div>
 				</div>
 			</div>
