--- a/markup/components/clientsQuotes/clientsQuotes.html
+++ b/markup/components/clientsQuotes/clientsQuotes.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
 	<div id="clientsQuotes">
 		<div class="mt-m">
-			<h2 class="block-title">our Clients say</h2>
+			<h2 class="block-title wow fadeIn" data-wow-delay=".1s">our Clients say</h2>
 		</div>
 		<div class="mt-m-lg">
 			<div class="clientsQuotes ver-indents-parent">
 				<div class="row">
 					{{#each clientsQuotes}}
 						<div class="col-sm-6 col-xxs-10 offset-xxs-1 offset-sm-0">
-							<div class="clientsQuotes-holder ver-indents-child">
+							<div class="clientsQuotes-holder ver-indents-child wow {{classAnim}}"  data-wow-delay=".1s">
 								<q class="clientsQuotes-quote">
 									<p class="clientsQuotes-quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do  enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
 								</q>
