--- a/markup/components/footer/footer.html
+++ b/markup/components/footer/footer.html
@@ -1,19 +1,25 @@
 <div class="footer-holder">
 	<div class="container-fluid">
 		<footer class="footer">
-			<div class="footer-block">
+			<div class="footer-block wow fadeInUp" data-wow-delay="">
 				<p class="footer-copy">All rights reserved 2015</p>
 			</div>
-			<div class="footer-block">
+			<div class="footer-block wow fadeInUp" data-wow-delay="">
 				<div class="footer-socials">
 					<ul class="footer-socials-list">
-						<li class="footer-socials-item"><a href="#" class="footer-socials-link icon-twitter-logo"></a></li>
-						<li class="footer-socials-item"><a href="#" class="footer-socials-link icon-facebook-logo"></a></li>
-						<li class="footer-socials-item"><a href="#" class="footer-socials-link icon-vk-logo"></a></li>
+						<li class="footer-socials-item">
+							<a href="#" class="footer-socials-link icon-twitter-logo"></a>
+						</li>
+						<li class="footer-socials-item">
+							<a href="#" class="footer-socials-link icon-facebook-logo"></a>
+						</li>
+						<li class="footer-socials-item">
+							<a href="#" class="footer-socials-link icon-vk-logo"></a>
+						</li>
 					</ul>
 				</div>
 			</div>
-			<div class="footer-block">
+			<div class="footer-block wow fadeInUp" data-wow-delay="">
 				<div class="footer-number">1 234 243 123</div> 
 			</div>
 		</footer>
