--- a/markup/components/offerCards/offerCards.scss
+++ b/markup/components/offerCards/offerCards.scss
@@ -6,6 +6,20 @@
 			top: auto;
 			bottom: 2px;
 			height: 6px;
+			&:after {
+				content: '';
+				display: block;
+				position: absolute;
+				top: -20px;
+				bottom: 0;
+				left: -20px;
+				right: 0;
+				width: 100%;
+				height: 100%;
+				padding: 20px;
+				box-sizing: content-box;
+
+			}
 		}
 	}
 	&-slide {
