change files struct  for using manual workflow(css). remove bootstrap @imports. add separate scss file with BT grid. add uncss task.

--- a/markup/static/scss/entry/main.scss
+++ b/markup/static/scss/entry/main.scss
@@ -9,6 +9,9 @@
 /* Plugins, which is used in current project. */
 @import 'partials/_plugins.scss';
 
+/* Grid without unused classes by uncss */
+@import '../uncss-output/grid';
+
 /* Components, which is used in current project. */
 @import 'partials/_components.scss';
 
