--- a/markup/static/scss/entry/partials/_components.scss
+++ b/markup/static/scss/entry/partials/_components.scss
@@ -1,1 +1,16 @@
 // @import 'components/_template/_template.scss';
+@import 'components/header/header.scss';
+@import 'components/jumbotron/jumbotron.scss';
+@import 'components/about/about.scss';
+@import 'components/coupleTiles/coupleTiles.scss';
+@import 'components/journal/journal.scss';
+@import 'components/order/order.scss';
+@import 'components/scheme/scheme.scss';
+@import 'components/offerCards/offerCards.scss';
+@import 'components/offers/offers.scss';
+@import 'components/gallery/gallery.scss';
+@import 'components/partners/partners.scss';
+@import 'components/clientsQuotes/clientsQuotes.scss';
+@import 'components/pageBottomBgHelper/pageBottomBgHelper.scss';
+@import 'components/contactForm/contactForm.scss';
+@import 'components/footer/footer.scss';
