--- a/markup/static/scss/mixins.scss
+++ b/markup/static/scss/mixins.scss
@@ -24,63 +24,7 @@
     }
 }
 
-@mixin blocks-justify {
-    text-align: justify;
-    text-justify: newspaper;
-}
-
-// You can add your own mixins here:
-
-@mixin box-shadow($shadow...) {
-  @if $enable-shadows {
-    box-shadow: $shadow;
-  }
-}
-
-@mixin transition($transition...) {
-  @if $enable-transitions {
-    transition: $transition;
-  }
-}
-
-// Utilities
 @import "bower_components/bootstrap/scss/mixins/breakpoints";
-@import "bower_components/bootstrap/scss/mixins/hover";
-@import "bower_components/bootstrap/scss/mixins/image";
-@import "bower_components/bootstrap/scss/mixins/tag";
-@import "bower_components/bootstrap/scss/mixins/reset-filter";
-@import "bower_components/bootstrap/scss/mixins/resize";
-@import "bower_components/bootstrap/scss/mixins/screen-reader";
-@import "bower_components/bootstrap/scss/mixins/size";
-@import "bower_components/bootstrap/scss/mixins/tab-focus";
-@import "bower_components/bootstrap/scss/mixins/reset-text";
-@import "bower_components/bootstrap/scss/mixins/text-emphasis";
-@import "bower_components/bootstrap/scss/mixins/text-hide";
-@import "bower_components/bootstrap/scss/mixins/text-truncate";
-
-// Components
-@import "bower_components/bootstrap/scss/mixins/alert";
-@import "bower_components/bootstrap/scss/mixins/buttons";
-@import "bower_components/bootstrap/scss/mixins/cards";
-@import "bower_components/bootstrap/scss/mixins/pagination";
-@import "bower_components/bootstrap/scss/mixins/lists";
-@import "bower_components/bootstrap/scss/mixins/list-group";
-@import "bower_components/bootstrap/scss/mixins/nav-divider";
-@import "bower_components/bootstrap/scss/mixins/forms";
-@import "bower_components/bootstrap/scss/mixins/progress";
-@import "bower_components/bootstrap/scss/mixins/table-row";
-
-// Skins
-@import "bower_components/bootstrap/scss/mixins/background-variant";
-@import "bower_components/bootstrap/scss/mixins/border-radius";
-@import "bower_components/bootstrap/scss/mixins/gradients";
-
-// // Layout
-@import "bower_components/bootstrap/scss/mixins/clearfix";
-@import "bower_components/bootstrap/scss/mixins/navbar-align";
-@import "bower_components/bootstrap/scss/mixins/grid-framework";
-@import "bower_components/bootstrap/scss/mixins/grid";
-@import "bower_components/bootstrap/scss/mixins/float";
 
 /// Remove the unit of a length
 /// @param {Number} $number - Number to remove unit from
@@ -107,7 +51,17 @@
     height: 100%;
 }
 
-@mixin table-fill-size ($offset:0){
+%abs-fill-size {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+%table-fill-size {
     display: table;
     width: 100%;
     height: 100%;
