--- a/markup/static/scss/fonts.scss
+++ b/markup/static/scss/fonts.scss
@@ -19,7 +19,8 @@ $CustomFont: 'CustomFont', Helvetica, Arial, sans-serif;
 
 @font-face {
     font-family: 'Bringin';
-    src: url('../fonts/Bringin/Bringin.otf'),
+    src: local('Bringin'),
+         url('../fonts/Bringin/Bringin.otf'),
          url('../fonts/Bringin/Bringin.ttf');
     font-weight: 400;       // For normal width. It could has another value   
     font-style: normal;     // Also could has another value
