add helper to not remove spaces between inline elems when it compressed

--- a/markup/components/partners/partners.html
+++ b/markup/components/partners/partners.html
@@ -8,7 +8,7 @@
 							<li class="partners-item ver-indents-child wow fadeIn"
 								data-wow-delay="{{animDelay}}s">
 								<a href="#" class="partners-link"><img src="%=static=%/img/content/partners/{{imgName}}.png" alt="Partner" class="partners-img"></a>
-							</li>
+							</li><!-- htmlmin:ignore --> <!-- htmlmin:ignore -->
 						{{/each}}
 					</ul>
 				</div>
